---------------------------------------------------------------------------------------------------
Version: 1.1.1
Date: 2025-02-03
  Changes:
    - Algorithm updated to suppress radial paths less heavily.
---------------------------------------------------------------------------------------------------
Version: 1.1.0
Date: 2025-02-03
  Changes:
    - Respect for the Triangle Inequality: If a route between two locations is longer or equal to another path between the same two locations, the route is deleted.
---------------------------------------------------------------------------------------------------
Version: 1.0.8
Date: 2025-02-03
  Changes:
    - Fixed the icons for space connections.
---------------------------------------------------------------------------------------------------
Version: 1.0.7
Date: 2025-02-03
  Changes:
    - Since there is a community map using Tiered-Solar-System and Planetary-Distance-Adjustments, the incompatibility with Planetary-Distance-Adjustments has been removed — the latter mod now simply has no effect if Redrawn Space Connections is installed.
---------------------------------------------------------------------------------------------------
Version: 1.0.6
Date: 2025-02-02
  Changes:
    - Description update.
---------------------------------------------------------------------------------------------------
Version: 1.0.5
Date: 2025-02-02
  Changes:
    - Better compatibility with Tiered Solar System.
---------------------------------------------------------------------------------------------------
Version: 1.0.4
Date: 2025-02-02
  Changes:
    - Removed some unused code.
---------------------------------------------------------------------------------------------------
Version: 1.0.3
Date: 2025-02-02
  Changes:
    - Hidden planets and connections are now excluded from the connection redraw.
    - Compatibility with planets with no icon.